# FastAPI-AI-Coding-Challenge-Generator

./: README.md  docker-compose.yml
backend/: Dockerfile  database.db  database.db-journal  pyproject.toml  server.py
backend/src/: .env  app.py  utils.py
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/utils/: api.js
