[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "clerk-backend-api>=3.0.5",
    "fastapi>=0.116.0",
    "openai>=1.93.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "svix>=1.69.0",
    "uvicorn>=0.34.2",
    "uv>=0.1.37",
    "psycopg2-binary>=2.9.10",
]
